--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,16 @@
-<table class="table table-striped">
+<!--<label>username</label>
+<input type="text" (keyup)="modified()">
+<h1 *ngIf= "name else abc then xyz"></h1>
+<ng-template #xyz>
+    <h1>Display value:{{name}}</h1>
+</ng-template>
+<ng-template #abc>
+    <h1>nothing to load</h1>
+</ng-template>-->
+<div id="search">
+<input type="search" placeholder="search value" (keyup)="search($event)"/>
+</div>
+<table class="table table-striped bg-primary">
     <thead>
         <tr>
             <th>id</th>
@@ -12,7 +24,7 @@
             <td > <a href="#/useredit/{{data.id}}">{{data.id}}</a></td>
             <td>{{data.name}}</td>
             <td>{{data.email}}</td>
-            <td><button class="btn btn-success" (click)="gotoEdit()">Edit</button>
+            <td><button class="btn btn-success" (click)="gotoEdit(data.id)">Edit</button>
             </td>
         </tr>
     </tbody>
